--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,87 @@
-body {
-background-image: url(https://static-prod.adweek.com/wp-content/uploads/2020/10/virtual-escape-room-PAGE-2020.jpg);
-height: 953px;
-width: 900px;
-background-size: cover;
-background-repeat: no-repeat;
+
+.image-container {
+	background-size: cover;
+	position: relative;
+}
+.image-container img {
+	width: 100% !important;
+	height: auto;
+	object-fit: cover;
+	z-index: -1;
+	bottom: 0;
 }
 
 .modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  padding-top: 100px; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: black; 
-  background-color: gray; 
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
 }
-
 
 .modal-content {
-  background-color: white;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid gray;
-  width: 80%;
+	background-color: white;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid gray;
+	width: 80%;
 }
 
-
 .close {
-  color: gray;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+	color: gray;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 #lockOne {
-  width: 75px;
-  height: auto;
-  background-size: 75px;
-  margin-top: 125px;
-  margin-left: 35px;
+	width: 75px;
+	height: 75px;
+	background-size: 75px;
+	margin-top: 125px;
+	margin-left: 35px;
 }
 
 #lockTwo {
-  width: 75px;
-  height: auto;
-  background-size: 75px;
-  margin-top: 125px;
-  margin-left: 35px;
+	width: 75px;
+	height: 75px;
+	background-size: 75px;
+	margin-top: 125px;
+	margin-left: 35px;
 }
 
 #lockThree {
-  width: 75px;
-  height: auto;
-  background-size: 75px;
-  margin-top: 125px;
-  margin-left: 35px;
+	width: 75px;
+	height: 75px;
+	background-size: 75px;
+	margin-top: 125px;
+	margin-left: 35px;
 }
 
 #dialogue {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-image: linear-gradient(gray, brown);
-  padding: 7px;
-  margin-left: 1000px;
-  margin-block-start: 1800px;
+	position: absolute;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande','Lucida Sans', Arial, sans-serif;
+	background-image: linear-gradient(gray, brown);
+	width: 700px;
+	padding: 7px;
+	right: 0%;
+	margin-top: 700px;
+	margin-left: 1100px;
+}
+
+.locks {
+	position: absolute;
+	top: 1%;
+	left: 1%;
 }
