--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@
 	position: fixed;
 	z-index: 1;
 	padding-top: 100px;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
+	left: 50px;
+	top: 700px;
+	width: 500px;
+	height: 500px;
 	overflow: auto;
 }
 
@@ -73,6 +73,7 @@
 	position: absolute;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande','Lucida Sans', Arial, sans-serif;
 	background-image: linear-gradient(gray, brown);
+	height: 200px;
 	width: 700px;
 	padding: 7px;
 	right: 0%;
